# back-it

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examples/running_5k/: combination-plan.json  project.yaml
examples/test_scores/: association-plan.json  prediction-plan.json  project.yaml  target.json
schemas/: analysis-plan.schema.json  prediction-plan.schema.json  project.schema.json
scripts/: export_schemas.py
src/backit/: __init__.py  analytics.py  cli.py  contracts.py  ledger.py  predictions.py  projects.py  provenance.py  reports.py  serialization.py  workbook.py
tests/end_to_end/: test_cli.py
tests/integration/: test_prediction_workflow.py  test_project_workflow.py  test_running_adapter.py  test_workbook.py
tests/unit/: test_analytics.py  test_contracts.py  test_ledger.py  test_provenance.py  test_reports.py
