[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "back-it"
version = "0.1.0"
description = "Deterministic personal analytics operated through Codex."
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "portalocker==3.2.0",
    "pyarrow==24.0.0",
    "pydantic==2.12.4",
    "PyYAML==6.0.3",
    "scipy==1.17.0",
    "statsmodels==0.14.6",
    "typer==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[project.scripts]
backit = "backit.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
